# app.js
@@ -2,6 +2,7 @@
 const express = require('express');
 const userController = require('./controller/userController');
 const transferController = require('./controller/transferController');
+const { authMiddleware } = require('./middleware/authMiddleware');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
 
@@ -13,9 +14,9 @@ app.post('/register', userController.register);
 app.post('/login', userController.login);
 app.get('/users', userController.list);
 
-// Transfer routes
-app.post('/transfer', transferController.transfer);
-app.get('/transfers', transferController.list);
+// Transfer routes protegidas por JWT
+app.post('/transfer', authMiddleware, transferController.transfer);
+app.get('/transfers', authMiddleware, transferController.list);
 
 // Swagger docs
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
