# middleware/authMiddleware.js
@@ -1,0 +1,19 @@
+const jwt = require('jsonwebtoken');
+
+const SECRET = process.env.JWT_SECRET || 'segredo_super_secreto';
+
+function authMiddleware(req, res, next) {
+  const authHeader = req.headers['authorization'];
+  if (!authHeader) return res.status(401).json({ error: 'Token não informado' });
+
+  const token = authHeader.split(' ')[1];
+  if (!token) return res.status(401).json({ error: 'Token mal formatado' });
+
+  jwt.verify(token, SECRET, (err, user) => {
+    if (err) return res.status(401).json({ error: 'Token inválido' });
+    req.user = user;
+    next();
+  });
+}
+
+module.exports = { authMiddleware, SECRET };
