# swagger.json
@@ -5,6 +5,18 @@
     "version": "1.0.0",
     "description": "API para login, registro, consulta de usuários e transferências."
   },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    }
+  },
+  "security": [
+    { "bearerAuth": [] }
+  ],
   "paths": {
     "/register": {
       "post": {
@@ -66,6 +78,7 @@
     "/transfer": {
       "post": {
         "summary": "Realizar transferência",
+        "security": [ { "bearerAuth": [] } ],
         "requestBody": {
           "required": true,
           "content": {
@@ -91,6 +104,7 @@
     "/transfers": {
       "get": {
         "summary": "Listar transferências",
+        "security": [ { "bearerAuth": [] } ],
         "responses": {
           "200": { "description": "Lista de transferências" }
         }
